# qbittorrent_api

./: .gitmodules  Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AppApi.md  AuthApi.md  BuildInfo.md  LogApi.md  MainData.md  MainLog.md  PeersLog.md  Preferences.md  PreferencesScanDirsValue.md  RssApi.md  RssRuleDef.md  SearchApi.md  SearchJob.md  SearchJobStatus.md  SearchPlugin.md  SearchPluginSupportedCategoriesInner.md  SearchResult.md  SearchResults.md  SetPreferences.md  SyncApi.md  TorrentInfo.md  TorrentsApi.md  TorrentsCategory.md  TorrentsFiles.md  TorrentsProperties.md  TorrentsTrackers.md  TorrentsWebseeds.md  TransferApi.md  TransferInfo.md
src/apis/: app_api.rs  auth_api.rs  configuration.rs  log_api.rs  mod.rs  rss_api.rs  search_api.rs  sync_api.rs  torrents_api.rs  transfer_api.rs
src/models/: build_info.rs  main_data.rs  main_log.rs  mod.rs  peers_log.rs  preferences.rs  preferences_scan_dirs_value.rs  rss_rule_def.rs  search_job.rs  search_job_status.rs  search_plugin.rs  search_plugin_supported_categories_inner.rs  search_result.rs  search_results.rs  set_preferences.rs  torrent_info.rs  torrents_category.rs  torrents_files.rs  torrents_properties.rs  torrents_trackers.rs  torrents_webseeds.rs  transfer_info.rs
